Refactor Main.elm structure, update package.json description, add elm.json, and enhance .gitignore

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "song-maker",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A simple song maker app using Elm and Parcel",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
