Configure Tailwind CSS v4 with Elm and Parcel
- Install @tailwindcss/postcss plugin and tailwindcss framework
- Add PostCSS configuration in package.json for v4 compatibility
- Create CSS file with @import "tailwindcss" syntax
- Link stylesheet in HTML head
- Add clean script for cache management (parcel-cache, elm-stuff)
- Update start script to clean caches before building
- Update Elm code to demonstrate Tailwind utility classes

Committed by Claude

--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "version": "1.0.0",
   "description": "A simple song maker app using Elm and Parcel",
   "scripts": {
-    "start": "parcel src/index.html",
+    "clean": "rm -rf .parcel-cache elm-stuff",
+    "start": "pnpm run clean && parcel src/index.html",
     "build": "parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.15.0",
+  "postcss": {
+    "plugins": {
+      "@tailwindcss/postcss": {}
+    }
+  },
   "devDependencies": {
+    "@parcel/transformer-elm": "2.15.4",
+    "@tailwindcss/postcss": "^4.1.13",
     "elm": "0.19.1-6",
-    "parcel": "^2.15.4"
+    "parcel": "^2.15.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13"
   }
 }
