--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "parcel": "^2.15.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13"
+  },
+  "dependencies": {
+    "webaudiofont": "^3.0.4"
   }
 }
