--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "A simple song maker app using Elm and Parcel",
   "scripts": {
-    "clean": "rm -rf .parcel-cache elm-stuff",
-    "start": "pnpm run clean && parcel src/index.html",
+    "clean": "rm -rf .parcel-cache dist elm-stuff",
+    "start": "pnpm run clean && parcel --no-cache --no-hmr src/index.html",
     "build": "parcel build src/index.html"
   },
   "keywords": [],
