Remove --no-hmr flag from start script
- Enable hot module replacement for better development experience
- Keeps --no-cache flag for reliable builds during development

Committed by Claude

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple song maker app using Elm and Parcel",
   "scripts": {
     "clean": "rm -rf .parcel-cache dist elm-stuff",
-    "start": "pnpm run clean && parcel --no-cache --no-hmr src/index.html",
+    "start": "pnpm run clean && parcel --no-cache src/index.html",
     "build": "parcel build src/index.html"
   },
   "keywords": [],
