--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "rm -rf .parcel-cache dist elm-stuff",
     "start": "pnpm run clean && parcel --no-cache src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "pnpm run clean && parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
