Create parallel V2 implementation with clean Hello World foundation
- Add Main2.elm with minimal Browser.element Hello World app
- Add index2.html stripped of audio/grid complexity for clean slate
- Add styles2.css with minimal Tailwind setup
- Add start2 script to package.json for parallel development
- Remove all WebAudioFont, ports, and grid logic for fresh start

This provides a clean foundation to build new grid-first architecture
from scratch while keeping original implementation as reference.

Committed by Claude

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "clean": "rm -rf .parcel-cache dist elm-stuff",
     "start": "pnpm run clean && parcel --no-cache src/index.html",
+    "start2": "pnpm run clean && parcel --no-cache src/index2.html",
     "build": "pnpm run clean && parcel build src/index.html"
   },
   "keywords": [],
