--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "elm": "0.19.1-6",
     "parcel": "^2.15.4",
     "postcss": "^8.5.6",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.13"
   },
   "dependencies": {
