--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     }
   },
   "devDependencies": {
-    "@parcel/transformer-elm": "2.15.4",
+    "@parcel/transformer-elm": "2.16.0",
     "@tailwindcss/postcss": "^4.1.13",
     "elm": "0.19.1-6",
-    "parcel": "^2.15.4",
+    "parcel": "2.16.0",
     "postcss": "^8.5.6",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.13"
