--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "packageManager": "pnpm@10.15.0",
   "browserslist": [
     "last 2 Chrome versions",
     "last 2 Firefox versions",
