--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build
-        run: pnpm run build
+        run: pnpm run build -- --public-url /song-maker/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
