fix: add clean step to deployment workflow before build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Clean
+        run: pnpm run clean
+
       - name: Build
         run: pnpm run build -- --public-url /song-maker/
 
