fix: streamline deployment workflow by combining install, clean, and build steps

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,14 +22,10 @@ jobs:
           node-version: 22
           cache: 'pnpm'
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Clean
-        run: pnpm run clean
-
-      - name: Build
-        run: pnpm run build -- --public-url /song-maker/
+      - run: |
+          pnpm install --frozen-lockfile
+          pnpm run clean
+          pnpm run build -- --public-url /song-maker/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
