--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
       - run: |
           pnpm install --frozen-lockfile
-          pnpm run build -- --public-url /song-maker/
+          pnpm run build --public-url /song-maker/
 
       - uses: actions/upload-pages-artifact@v3
         with:
