--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^24.5.2",
     "elm": "0.19.1-6",
+    "elm-review": "^2.13.4",
     "parcel": "2.16.0",
     "postcss": "^8.5.6",
     "tailwind-scrollbar": "^4.0.2",
