--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "clean": "rm -rf .parcel-cache dist prod elm-stuff",
     "start": "pnpm run clean && parcel --no-cache src/index.html",
     "build": "parcel build src/index.html",
-    "clean:build": "pnpm run clean && pnpm run build"
+    "clean:build": "pnpm run clean && pnpm run build",
+    "elm-review" : "elm-review"
   },
   "keywords": [],
   "author": "",
